# Python-Job-Scrapper

./: indeed.py  main.py  pyproject.toml  readme.md  save.py  so.py
