[tool.poetry]
name = "python-job-scrapper"
version = "0.1.0"
description = ""
authors = ["yhcwawo <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
